Change the path of bg image with github RAW; Firefox seemed to have issues with the previous one for some reason & add workaround for accordion text overlap.
Also; YUI Compressor seems to have some problem; interesting. :)

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,9 @@ body {
     height: 100%;
     width: 100%;
     /* First value is from left and second is from top. You can use use number as well*/
-    background: #078216 url(/img/Callisto2.png) no-repeat center center;
+   /* background: #078216 url(/img/Callisto2.png) no-repeat center center;
+    background-size: cover; */
+    background-image: url('https://raw.githubusercontent.com/Sid-Sun/Sid-Sun.GitHub.io/master/img/Callisto2.png');
     background-size: cover;
 }
 
@@ -77,7 +79,6 @@ i:hover {
     text-align: center;
     padding-bottom: 40px;
 }
-
 @media (max-width: 768px) {
     body {
         background: transparent none;
@@ -112,6 +113,7 @@ i:hover {
     background-color: #ffffff;
     overflow: hidden;
     -webkit-padding-after: 5%;
+    margin-bottom: 2% !important;
 }
 
 #objective {
